# bmail

./: README.md
poc1/: .env  Cargo.toml  db.sqlite
poc1/migrations/: 20250619201406_init.sql
poc1/src/: cloudmailin.rs  cookie.rs  main.rs  server.rs  signicat.rs  user.rs
poc1/src/server/: handlers.rs
poc1/src/server/handlers/: inbox.rs  index.rs  login.rs  mail.rs  tpl.rs  user.rs
poc1/src/server/static/: style.css
poc1/tests/payloads/: cloudmailin_incoming_1.json
